--- a/src/pug/sections/_category-cards.pug
+++ b/src/pug/sections/_category-cards.pug
@@ -10,17 +10,17 @@ section.category-cards.pt-80
 				.category-card__img
 					img(src="./img/cat1.png",  alt="categogy")
 				//====text =====
-				.category-card__text
+				.product-descrip
 					.rating-block(data-rating="5")
 						span
 						span
 						span
 						span
 						span
-					.category-card__title
+					.product-descrip__title
 						.title-38 Solution
 						p HERE A 24/18
-					.category-card__info
+					.product-descrip__info
 						.info-item__row
 							.info-item
 								span Hot water:
@@ -44,17 +44,17 @@ section.category-cards.pt-80
 				.category-card__img
 					img(src="./img/cat2.png",  alt="categogy")
 				//====text =====
-				.category-card__text
+				.product-descrip
 					.rating-block(data-rating="4")
 						span
 						span
 						span
 						span
 						span
-					.category-card__title
+					.product-descrip__title
 						.title-38 Remeha
 						p Tzerra Ace-24c
-					.category-card__info
+					.product-descrip__info
 						.info-item__row
 							.info-item
 								span Hot water:
@@ -79,17 +79,17 @@ section.category-cards.pt-80
 				.category-card__img
 					img(src="./img/cat1.png",  alt="categogy")
 				//====text =====
-				.category-card__text
+				.product-descrip
 					.rating-block(data-rating="5")
 						span
 						span
 						span
 						span
 						span
-					.category-card__title
+					.product-descrip__title
 						.title-38 Solution
 						p HERE A 24/18
-					.category-card__info
+					.product-descrip__info
 						.info-item__row
 							.info-item
 								span Hot water:
@@ -113,17 +113,17 @@ section.category-cards.pt-80
 				.category-card__img
 					img(src="./img/cat2.png",  alt="categogy")
 				//====text =====
-				.category-card__text
+				.product-descrip
 					.rating-block(data-rating="4")
 						span
 						span
 						span
 						span
 						span
-					.category-card__title
+					.product-descrip__title
 						.title-38 Remeha
 						p Tzerra Ace-24c
-					.category-card__info
+					.product-descrip__info
 						.info-item__row
 							.info-item
 								span Hot water:
@@ -148,17 +148,17 @@ section.category-cards.pt-80
 				.category-card__img
 					img(src="./img/cat1.png",  alt="categogy")
 				//====text =====
-				.category-card__text
+				.product-descrip
 					.rating-block(data-rating="5")
 						span
 						span
 						span
 						span
 						span
-					.category-card__title
+					.product-descrip__title
 						.title-38 Solution
 						p HERE A 24/18
-					.category-card__info
+					.product-descrip__info
 						.info-item__row
 							.info-item
 								span Hot water:
@@ -182,17 +182,17 @@ section.category-cards.pt-80
 				.category-card__img
 					img(src="./img/cat2.png",  alt="categogy")
 				//====text =====
-				.category-card__text
+				.product-descrip
 					.rating-block(data-rating="4")
 						span
 						span
 						span
 						span
 						span
-					.category-card__title
+					.product-descrip__title
 						.title-38 Remeha
 						p Tzerra Ace-24c
-					.category-card__info
+					.product-descrip__info
 						.info-item__row
 							.info-item
 								span Hot water:
