--- a/src/pug/sections/_faq.pug
+++ b/src/pug/sections/_faq.pug
@@ -1,3 +1,28 @@
-section.faq
+section.faq.pt-120
 	.container
-		
+		.section-title
+			.title-88 Frequently Asked Questions
+
+		.accordeon-group
+			.accordeon-item
+				.accordeon-item-header(data-name='accordeon-title')
+					.title-24 What are the Top-5 Solar Panel systems?
+				.accordeon-item-content
+					p
+						| ADT remains a leading home security system due to its well-honed monitoring services. Other top companies include Vivint, Brinks Home Security, Frontpoint, and Link Home Security
+					
+			.accordeon-item
+				.accordeon-item-header(data-name='accordeon-title')
+					.title-24 What is the most effecient Solar Panel system?
+				.accordeon-item-content
+					p
+						| ADT remains a leading home security system due to its well-honed monitoring services. Other top companies include Vivint, Brinks Home Security, Frontpoint, and Link Home Security
+					
+			.accordeon-item
+				.accordeon-item-header(data-name='accordeon-title')
+					.title-24 Is it worth instaling Solar Panel system?
+				.accordeon-item-content
+					p
+						| ADT remains a leading home security system due to its well-honed monitoring services. Other top companies include Vivint, Brinks Home Security, Frontpoint, and Link Home Security
+						
+				
