--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -15,6 +15,7 @@
 	font-size: 20px;
 	line-height: 1.2;
 	color: #000000;
+	background-color:#F7F7F7;
 	-webkit-font-smoothing: antialiased;
 	
   }
