--- a/src/pug/sections/_category-page-header.pug
+++ b/src/pug/sections/_category-page-header.pug
@@ -4,9 +4,9 @@ header.header
 			h1.title-96 Our top heater offers
 		
 		.header__text.grid-50.mb-60
-			.header__text-col.text-medium
+			.header__text-col
 				p All of our boilers are a hybrid-ready. This means that they will both now and in the future, can be coupled to a hybrid heat pump.
-			.header__text-col.text-medium
+			.header__text-col
 				p Would or have you completely off the accelerator? Also, we have the solution with our GasLos warranty
 			
 		.grid-850
