--- a/src/pug/blocks/_aside-menu.pug
+++ b/src/pug/blocks/_aside-menu.pug
@@ -16,7 +16,7 @@
 			//=== single block ====
 			.aside-menu__list-block
 				a(href="#!") Reviews
-				a(href="#!") Comparison
+				a(href="comparison.html") Comparison
 				a(href="#!") Articles
 			
 			//=== single block ====
