--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -13,6 +13,7 @@
  @import "blocks/quiz.scss";
  @import "blocks/card-number.scss";
  @import "blocks/category-card.scss";
+ @import "blocks/comparison-card.scss";
 
  //sections
  @import "sections/header";
@@ -21,3 +22,4 @@
  @import "sections/review";
  @import "sections/populare";
  @import "sections/faq";
+ @import "sections/comparison-page";
