--- a/src/pug/sections/_category-cards.pug
+++ b/src/pug/sections/_category-cards.pug
@@ -1,14 +1,15 @@
-section.category-cards.pt-80
+section.product-cards.pt-80
 	.container
-		.category-cards-wrapper
+		.product-cards-wrapper
 			//============ single card ===========
-			a(href='#').category-card
-				.category-card__label
-					.label CW3
-					.label.label--red Popular
-				//==== image =====
-				.category-card__img
-					img(src="./img/cat1.png",  alt="categogy")
+			a(href='#').product-card
+				.product-card__top
+					.product-card__label
+						.label CW3
+						.label.label--red Popular
+					//==== image =====
+					.product-card__img
+						img(src="./img/cat1.png",  alt="categogy")
 				//====text =====
 				.product-descrip
 					.rating-block(data-rating="5")
@@ -32,17 +33,18 @@ section.category-cards.pt-80
 						.info-item
 							span Power: 17 kW
 				//====button====
-				.category-card__btn
+				.product-card__btn
 					.btn-round
 						span Read review
 						span.arrowRight
 			//============ single card ===========
-			a(href='#').category-card
-				.category-card__label
-					.label CW3
-				//==== image =====
-				.category-card__img
-					img(src="./img/cat2.png",  alt="categogy")
+			a(href='#').product-card
+				.product-card__top
+					.product-card__label
+						.label CW3
+					//==== image =====
+					.product-card__img
+						img(src="./img/cat2.png",  alt="categogy")
 				//====text =====
 				.product-descrip
 					.rating-block(data-rating="4")
@@ -66,18 +68,19 @@ section.category-cards.pt-80
 						.info-item
 							span Power: 20,9 kW
 				//====button====
-				.category-card__btn
+				.product-card__btn
 					.btn-round
 						span Read review
 						span.arrowRight
 			//============ single card ===========
-			a(href='#').category-card
-				.category-card__label
-					.label CW3
-					.label.label--red Popular
-				//==== image =====
-				.category-card__img
-					img(src="./img/cat1.png",  alt="categogy")
+			a(href='#').product-card
+				.product-card__top
+					.product-card__label
+						.label CW3
+						.label.label--red Popular
+					//==== image =====
+					.product-card__img
+						img(src="./img/cat1.png",  alt="categogy")
 				//====text =====
 				.product-descrip
 					.rating-block(data-rating="5")
@@ -101,17 +104,18 @@ section.category-cards.pt-80
 						.info-item
 							span Power: 17 kW
 				//====button====
-				.category-card__btn
+				.product-card__btn
 					.btn-round
 						span Read review
 						span.arrowRight
 			//============ single card ===========
-			a(href='#').category-card
-				.category-card__label
-					.label CW3
-				//==== image =====
-				.category-card__img
-					img(src="./img/cat2.png",  alt="categogy")
+			a(href='#').product-card
+				.product-card__top
+					.product-card__label
+						.label CW3
+					//==== image =====
+					.product-card__img
+						img(src="./img/cat2.png",  alt="categogy")
 				//====text =====
 				.product-descrip
 					.rating-block(data-rating="4")
@@ -135,18 +139,19 @@ section.category-cards.pt-80
 						.info-item
 							span Power: 20,9 kW
 				//====button====
-				.category-card__btn
+				.product-card__btn
 					.btn-round
 						span Read review
 						span.arrowRight
 			//============ single card ===========
-			a(href='#').category-card
-				.category-card__label
-					.label CW3
-					.label.label--red Popular
-				//==== image =====
-				.category-card__img
-					img(src="./img/cat1.png",  alt="categogy")
+			a(href='#').product-card
+				.product-card__top
+					.product-card__label
+						.label CW3
+						.label.label--red Popular
+					//==== image =====
+					.product-card__img
+						img(src="./img/cat1.png",  alt="categogy")
 				//====text =====
 				.product-descrip
 					.rating-block(data-rating="5")
@@ -170,17 +175,18 @@ section.category-cards.pt-80
 						.info-item
 							span Power: 17 kW
 				//====button====
-				.category-card__btn
+				.product-card__btn
 					.btn-round
 						span Read review
 						span.arrowRight
 			//============ single card ===========
-			a(href='#').category-card
-				.category-card__label
-					.label CW3
-				//==== image =====
-				.category-card__img
-					img(src="./img/cat2.png",  alt="categogy")
+			a(href='#').product-card
+				.product-card__top
+					.product-card__label
+						.label CW3
+					//==== image =====
+					.product-card__img
+						img(src="./img/cat2.png",  alt="categogy")
 				//====text =====
 				.product-descrip
 					.rating-block(data-rating="4")
@@ -204,7 +210,7 @@ section.category-cards.pt-80
 						.info-item
 							span Power: 20,9 kW
 				//====button====
-				.category-card__btn
+				.product-card__btn
 					.btn-round
 						span Read review
 						span.arrowRight
