--- a/src/pug/sections/_comparison-cards.pug
+++ b/src/pug/sections/_comparison-cards.pug
@@ -1,14 +1,17 @@
-section.category-cards.pt-80
+section.top-products
 	.container
-		.category-cards-wrapper
-			//============ single card ===========
-			a(href='#').category-card
-				.category-card__label
-					.label CW3
-					.label.label--red Popular
-				//==== image =====
-				.category-card__img
-					img(src="./img/cat1.png",  alt="categogy")
+		
+		//============ ADT card ===========
+		.adt-card.favorite-card
+			.product-card.product-card--horizontal
+				.product-card__top
+					.product-card__label
+						.label.label--red Winner
+						.label FAVORITE VALUE
+						
+					//==== image =====
+					.product-card__img
+						img(src="./img/adt.png", width="180" height="180" alt="adt")
 				//====text =====
 				.product-descrip
 					.rating-block(data-rating="5")
@@ -18,198 +21,186 @@ section.category-cards.pt-80
 						span
 						span
 					.product-descrip__title
-						.title-38 Solution
-						p HERE A 24/18
+						.title-38 ADT
+						p The most favorite DIY system 
 					.product-descrip__info
 						.info-item__row
 							.info-item
-								span Hot water:
-								p 10 l/min
+								span Equipment Cost:
+								p $226
 							
 							.info-item
 								span Monthly Cost:
-								p.text-green $25/month
+								p.text-green $14.99/month
 						.info-item
-							span Power: 17 kW
+							span Installation Cost: N/A
 				//====button====
-				.category-card__btn
-					.btn-round
-						span Read review
-						span.arrowRight
-			//============ single card ===========
-			a(href='#').category-card
-				.category-card__label
-					.label CW3
-				//==== image =====
-				.category-card__img
-					img(src="./img/cat2.png",  alt="categogy")
-				//====text =====
-				.product-descrip
-					.rating-block(data-rating="4")
-						span
-						span
-						span
-						span
-						span
-					.product-descrip__title
-						.title-38 Remeha
-						p Tzerra Ace-24c
-					.product-descrip__info
-						.info-item__row
-							.info-item
-								span Hot water:
-								p 11,2 l/min
-							
-							.info-item
-								span Monthly Cost:
-								p.text-green $26/month
-						.info-item
-							span Power: 20,9 kW
-				//====button====
-				.category-card__btn
-					.btn-round
-						span Read review
-						span.arrowRight
-			//============ single card ===========
-			a(href='#').category-card
-				.category-card__label
-					.label CW3
-					.label.label--red Popular
-				//==== image =====
-				.category-card__img
-					img(src="./img/cat1.png",  alt="categogy")
-				//====text =====
-				.product-descrip
-					.rating-block(data-rating="5")
-						span
-						span
-						span
-						span
-						span
-					.product-descrip__title
-						.title-38 Solution
-						p HERE A 24/18
-					.product-descrip__info
-						.info-item__row
-							.info-item
-								span Hot water:
-								p 10 l/min
-							
-							.info-item
-								span Monthly Cost:
-								p.text-green $25/month
-						.info-item
-							span Power: 17 kW
-				//====button====
-				.category-card__btn
-					.btn-round
-						span Read review
-						span.arrowRight
-			//============ single card ===========
-			a(href='#').category-card
-				.category-card__label
-					.label CW3
-				//==== image =====
-				.category-card__img
-					img(src="./img/cat2.png",  alt="categogy")
-				//====text =====
-				.product-descrip
-					.rating-block(data-rating="4")
-						span
-						span
-						span
-						span
-						span
-					.product-descrip__title
-						.title-38 Remeha
-						p Tzerra Ace-24c
-					.product-descrip__info
-						.info-item__row
-							.info-item
-								span Hot water:
-								p 11,2 l/min
-							
-							.info-item
-								span Monthly Cost:
-								p.text-green $26/month
-						.info-item
-							span Power: 20,9 kW
-				//====button====
-				.category-card__btn
-					.btn-round
-						span Read review
-						span.arrowRight
-			//============ single card ===========
-			a(href='#').category-card
-				.category-card__label
-					.label CW3
-					.label.label--red Popular
-				//==== image =====
-				.category-card__img
-					img(src="./img/cat1.png",  alt="categogy")
-				//====text =====
-				.product-descrip
-					.rating-block(data-rating="5")
-						span
-						span
-						span
-						span
-						span
-					.product-descrip__title
-						.title-38 Solution
-						p HERE A 24/18
-					.product-descrip__info
-						.info-item__row
-							.info-item
-								span Hot water:
-								p 10 l/min
-							
-							.info-item
-								span Monthly Cost:
-								p.text-green $25/month
-						.info-item
-							span Power: 17 kW
-				//====button====
-				.category-card__btn
-					.btn-round
-						span Read review
-						span.arrowRight
-			//============ single card ===========
-			a(href='#').category-card
-				.category-card__label
-					.label CW3
-				//==== image =====
-				.category-card__img
-					img(src="./img/cat2.png",  alt="categogy")
-				//====text =====
-				.product-descrip
-					.rating-block(data-rating="4")
-						span
-						span
-						span
-						span
-						span
-					.product-descrip__title
-						.title-38 Remeha
-						p Tzerra Ace-24c
-					.product-descrip__info
-						.info-item__row
-							.info-item
-								span Hot water:
-								p 11,2 l/min
-							
-							.info-item
-								span Monthly Cost:
-								p.text-green $26/month
-						.info-item
-							span Power: 20,9 kW
-				//====button====
-				.category-card__btn
-					.btn-round
-						span Read review
-						span.arrowRight
+				.product-card__btn
+					.card-bg(style="background-image: url(./img/card-bg3.jpg);")
+						p Black November Sale Extended: 
+							span 50% Off Equipment + Free Camera
+						a.btn-round.btn-round--red(href="#!")
+							span Sign up online
+							span.arrowRight
+					a(href="#").btn-light Read in-depth review
 
-		//==========section button==========
-		.button-wrapper.text-center.mt-50
-			a(href="#!").btn-round-light.btn-large
-				span Show more heaters
+		//============ Vivint card ===========
+		.vivint-card.favorite-card
+			.product-card.product-card--horizontal
+				.product-card__top
+					.product-card__label
+						.label.label--red.label--num 2
+						.label WELL KNOWN
+						
+					//==== image =====
+					.product-card__img
+						img(src="./img/vivint.png", width="300" height="70" alt="vivint")
+				//====text =====
+				.product-descrip
+					.rating-block(data-rating="4")
+						span
+						span
+						span
+						span
+						span
+					.product-descrip__title
+						.title-38 Vivint
+						p Expert installation & service
+					.product-descrip__info
+						.info-item__row
+							.info-item
+								span Equipment Cost:
+								p $850
+							
+							.info-item
+								span Monthly Cost:
+								p.text-green $52.99/month
+						.info-item
+							span Installation Cost: $99
+				//====button====
+				.product-card__btn
+					a.btn-round(href="#!")
+						span Request a quote
+						span.arrowRight
+					a(href="#").btn-light Read in-depth review 
+
+		
+		//============ Simpli-card ===========
+		.simpli-card.favorite-card
+			.product-card.product-card--horizontal
+				.product-card__top
+					.product-card__label
+						.label.label--red.label--num 3
+						.label MOST features
+						
+					//==== image =====
+					.product-card__img
+						img(src="./img/simpli.png", width="300" height="60" alt="simpli")
+				//====text =====
+				.product-descrip
+					.rating-block(data-rating="4")
+						span
+						span
+						span
+						span
+						span
+					.product-descrip__title
+						.title-38 SimpliSafe
+						p Perfect home automation
+					.product-descrip__info
+						.info-item__row
+							.info-item
+								span Equipment Cost:
+								p $599
+							
+							.info-item
+								span Monthly Cost:
+								p.text-green $39.99/month
+						.info-item
+							span Installation Cost: $49
+				//====button====
+				.product-card__btn
+					a.btn-round(href="#!")
+						span Request a quote
+						span.arrowRight
+					a(href="#").btn-light Read in-depth review
+		
+		//============ Cove-card ===========
+		.cove-card.favorite-card
+			.product-card.product-card--horizontal
+				.product-card__top
+					.product-card__label
+						.label.label--red.label--num 4
+						.label most PORTABLE
+						
+					//==== image =====
+					.product-card__img
+						img(src="./img/cove.png", width="263" height="40" alt="cove")
+				//====text =====
+				.product-descrip
+					.rating-block(data-rating="3")
+						span
+						span
+						span
+						span
+						span
+					.product-descrip__title
+						.title-38 Cove
+						p Largest solar energy hub
+					.product-descrip__info
+						.info-item__row
+							.info-item
+								span Equipment Cost:
+								p $259
+							
+							.info-item
+								span Monthly Cost:
+								p.text-green $15.99/month
+						.info-item
+							span Installation Cost: $79
+				//====button====
+				.product-card__btn
+					a.btn-round(href="#!")
+						span Request a quote
+						span.arrowRight
+					a(href="#").btn-light Read in-depth review 
+		
+		//============ Cove-card ===========
+		.front-card.favorite-card
+			.product-card.product-card--horizontal
+				.product-card__top
+					.product-card__label
+						.label.label--red.label--num 5
+						.label most CHOICES
+						
+					//==== image =====
+					.product-card__img
+						img(src="./img/front.png", width="300" height="90" alt="cove")
+				//====text =====
+				.product-descrip
+					.rating-block(data-rating="3")
+						span
+						span
+						span
+						span
+						span
+					.product-descrip__title
+						.title-38 Frontpoint
+						p Simplest pre-built packages
+					.product-descrip__info
+						.info-item__row
+							.info-item
+								span Equipment Cost:
+								p $319
+							
+							.info-item
+								span Monthly Cost:
+								p.text-green $40.40/month
+						.info-item
+							span Installation Cost: $79
+				//====button====
+				.product-card__btn
+					a.btn-round(href="#!")
+						span Request a quote
+						span.arrowRight
+					a(href="#").btn-light Installation Cost: N/A
