--- a/src/scss/base/_buttons.scss
+++ b/src/scss/base/_buttons.scss
@@ -52,12 +52,16 @@
         border-color: #ffc123;
 	}
 }
+.btn-round.btn-round--red{
+	border-color: #EB5757;
+	background-color: #EB5757;
+}
 .btn-large{
 	width: 630px;
 }
 /**/
 .label{	
-
+	text-transform: uppercase;
 	display: inline-block;    
     font-size: 18px;
     font-weight: 500;
@@ -77,6 +81,13 @@
 }
 .label.label--red{
 	background-color: $red;
+}
+.label.label--num{
+	font-family: $fd;
+	font-size: 24px;
+	font-feature-settings: 'pnum' on, 'lnum' on;
+	font-weight: 900;
+	
 }
 .btn-arrow{
 	padding-left: 20px;
