--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -10,6 +10,7 @@ block content
 		include ../sections/_popular.pug
 		include ../sections/_number-card-bottom.pug
 	
+	include ../sections/_footer.pug
 	
 	
 	
