--- a/src/pug/sections/_header.pug
+++ b/src/pug/sections/_header.pug
@@ -2,7 +2,7 @@
 .header-top
 	.container
 		.header-top__content
-			a(href="#!").logo #[span the ] green home
+			a(href="index.html").logo #[span the ] green home
 			.nav-icon
 				span
 		
