--- a/src/pug/pages/comparison.pug
+++ b/src/pug/pages/comparison.pug
@@ -10,6 +10,7 @@ block content
 		include ../sections/_faq.pug
 		include ../sections/_popular.pug
 		include ../sections/_number-card-bottom
+	include ../sections/_footer.pug
 	
 	
 	
