--- a/src/scss/base/_typografy.scss
+++ b/src/scss/base/_typografy.scss
@@ -84,3 +84,8 @@
 .section-title{
 	margin-bottom: 50px;
 }
+.bold-link{
+	text-transform: uppercase;
+	font-weight: 700;
+	letter-spacing: 0.05em;
+}
