--- a/src/pug/blocks/_aside-menu.pug
+++ b/src/pug/blocks/_aside-menu.pug
@@ -15,9 +15,9 @@
 			
 			//=== single block ====
 			.aside-menu__list-block
-				a(href="#!") Reviews
+				a(href="review.html") Reviews
 				a(href="comparison.html") Comparison
-				a(href="#!") Articles
+				a(href="article.html") Articles
 			
 			//=== single block ====
 			.aside-menu__list-block
