--- a/src/scss/blocks/_category-card.scss
+++ b/src/scss/blocks/_category-card.scss
@@ -113,16 +113,16 @@
 	}
 }
 .vivint-card,.simpli-card{
-	.product-card__img{background-color:  #FFCF56;}
+	.product-card__img{background-color:  #FFCF56;padding: 40px;border-radius: 10px;}
 }
 .cove-card{
 	.product-card__img{
-		background-color: #00CDB8;
+		background-color: #00CDB8;padding: 40px;border-radius: 10px;
 	}
 }
 .front-card{
 	.product-card__img{
-		background-color: #59BC64;
+		background-color: #59BC64;padding: 40px;border-radius: 10px;
 	}
 }
 
