--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -23,4 +23,5 @@
  @import "sections/populare";
  @import "sections/faq";
  @import "sections/comparison-page";
+ @import "sections/review-page";
  @import "sections/footer";
