--- a/src/scss/sections/_review.scss
+++ b/src/scss/sections/_review.scss
@@ -26,6 +26,10 @@
 
 	}
 	.title-44{margin-bottom: 16px;}
+	.title-88{margin-bottom: 20px;}
+	.border-text{
+		margin-bottom: 10px;
+	}
 }
 .card-link{
 	border-radius: 10px;
