--- a/src/scss/base/_typografy.scss
+++ b/src/scss/base/_typografy.scss
@@ -89,3 +89,17 @@
 	font-weight: 700;
 	letter-spacing: 0.05em;
 }
+.border-text{
+	display: inline-block;
+	font-weight: 500;
+	font-size: 18px;
+	letter-spacing: 0.05em;
+	text-transform: uppercase;
+	color: #000000;
+	height: 34px;
+	line-height: 34px;
+	border: 1px solid #000000;
+	border-radius: 6px;
+	padding-left: 10px;
+	padding-right: 10px;
+}
